// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/queryProfile/1/1/123456 should match snapshot 1`] = `
Object {
  "data": "sample data for queryProfile",
}
`;

exports[`/queryProfileMetadata/1/1/123456 should match snapshot 1`] = `
Object {
  "data": "sample data for queryProfileMetadata",
}
`;

exports[`/queryStaticProfileData/1 should match snapshot 1`] = `
Object {
  "data": "sample data for queryStaticProfileData",
}
`;
